# sqldiff

./: .gitignore  README.md  setup.cfg
sqldiff/: annotator.py  archiver.py  baseline.py  classifier.py  cli.py  comparator.py  differ.py  differ_stats.py  exporter.py  filter.py  formatter.py  graph_cli.py  grapher.py  inspect_cli.py  inspector.py  linter.py  loader.py  merger.py  migrator.py  parser.py  patcher.py  plan_cli.py  planner.py  profile_cli.py  profiler.py  renamer.py  reporter.py  schema.py  score_cli.py  scorer.py  snapshotter.py  stat_cli.py  summarizer.py  tag_cli.py  tagger.py  trace_cli.py  tracer.py  validator.py  watch_cli.py  watcher.py
tests/: test_annotator.py  test_archiver.py  test_baseline.py  test_classifier.py  test_cli.py  test_comparator.py  test_differ.py  test_differ_stats.py  test_exporter.py  test_filter.py  test_graph_cli.py  test_grapher.py  test_inspector.py  test_linter.py  test_loader.py  test_merger.py  test_migrator.py  test_parser.py  test_plan_cli.py  test_planner.py  test_profiler.py  test_renamer.py  test_reporter.py  test_scorer.py  test_snapshotter.py  test_stat_cli.py  test_summarizer.py  test_tag_cli.py  test_tagger.py  test_trace_cli.py  test_tracer.py  test_validator.py  test_watch_cli.py  test_watcher.py
