[metadata]
name = sqldiff
version = 0.1.0
description = Lightweight utility to diff schema changes between two database snapshots
long_description = file: README.md
long_description_content_type = text/markdown
author = sqldiff contributors
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    sqldiff = sqldiff.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0

[tool:pytest]
testpaths = tests
addopts = --tb=short

[coverage:run]
source = sqldiff
omit =
    tests/*
    setup.py

[coverage:report]
show_missing = true
fail_under = 80
