[metadata]
name = sqldiff
version = 0.1.0
description = Lightweight utility to diff schema changes between two database snapshots
author = sqldiff developers
license = MIT

[options]
packages = find:
install_requires =
    sqlparse>=0.4

[options.entry_points]
console_scripts =
    sqldiff = sqldiff.cli:main
    sqldiff-watch = sqldiff.watch_cli:main
    sqldiff-score = sqldiff.score_cli:main
    sqldiff-graph = sqldiff.graph_cli:main

[options.extras_require]
dev =
    pytest>=7
    pytest-cov

[tool:pytest]
testpaths = tests
addopts = --tb=short

[flake8]
max-line-length = 99
exclude = .git,__pycache__,build,dist

[mypy]
python_version = 3.10
strict = false
