[metadata]
name = sqldiff
version = 0.1.0
description = Lightweight utility to diff schema changes between two database snapshots
long_description = file: README.md
long_description_content_type = text/markdown
author = sqldiff contributors
license = MIT

[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    sqldiff      = sqldiff.cli:main
    sqldiff-watch = sqldiff.watch_cli:main
    sqldiff-score = sqldiff.score_cli:main
    sqldiff-graph = sqldiff.graph_cli:main
    sqldiff-tag   = sqldiff.tag_cli:main
    sqldiff-profile = sqldiff.profile_cli:main
    sqldiff-inspect = sqldiff.inspect_cli:main
    sqldiff-plan  = sqldiff.plan_cli:main
    sqldiff-trace = sqldiff.trace_cli:main
    sqldiff-stat  = sqldiff.stat_cli:main

[options.extras_require]
dev =
    pytest>=7
    pytest-cov

[tool:pytest]
testpaths = tests

[flake8]
max-line-length = 100
exclude = .git,__pycache__,*.egg-info
